# juce_meets_cef

./: .gitmodules  CMakeLists.txt  README.md
Apps/: CMakeLists.txt
Apps/ConsoleApp/: CMakeLists.txt  CefJuceAudioSink.cpp  CefJuceAudioSink.h  DSPModulePluginDemo.h  Main.cpp  MainComponent.cpp
Apps/ConsoleApp/cefsimple/: CMakeLists.txt  simple_app.cc  simple_app.h  simple_handler.cc  simple_handler.h
Plugins/: CMakeLists.txt
Plugins/HelloJuceCef/: CMakeLists.txt  cefclient_juce.cpp  cefclient_juce.h  cefclient_win.cc
Plugins/HelloJuceCef/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/HelloJuceCef/Source/CEF/: CEFRunner.cpp  CEFRunner.h  cefsimple_win.cc  simple_app.cc  simple_app.h  simple_handler.cc  simple_handler.h
Plugins/HelloJuceCef/browser/: root_window_win.cc  views_window.cc
Plugins/HelloJuceCef/cefclient/: CMakeLists.txt
